# cpp.react_research

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  _config.yml
amalgamate/: config.json
benchmarks/src/: BenchmarkBase.h  BenchmarkFanout.h  BenchmarkGrid.h  BenchmarkLifeSim.h  BenchmarkRandom.h  BenchmarkSequence.h  Main.cpp
docs/http/: index.html
docs/http/examples/: Signals-vs-callbacks.html
docs/http/guides/: Concurrency.html  Dataflow-model.html  Design-rationale.html  Introduction.html  index.html
docs/http/guides/engines/: Pulsecount-engine.html  Subtree-engine.html  Toposort-engine.html  index.html
docs/http/reference/: Algorithm.h.html  Domain.h.html  Event.h.html  Observer.h.html  Reactor.h.html  Signal.h.html  TypeTraits.h.html  index.html
docs/http/reference/Algorithm.h/: Changed.html  ChangedTo.html  Hold.html  Iterate.html  Monitor.html  Pulse.html  Snapshot.html  index.html
docs/http/reference/Domain.h/: AsyncTransaction.html  Continuation.html  DoTransaction.html  MakeContinuation.html  REACTIVE_DOMAIN.html  TransactionStatus.html  USING_REACTIVE_DOMAIN.html  WeightHint.html  index.html
docs/http/reference/Event.h/: EventRange.html  EventSource.html  Events.html  Filter.html  Flatten.html  Join.html  Merge.html  (+7 more)
docs/http/tutorials/: Async.html  BasicAlgorithms.html  BasicComposition.html  BasicEvents.html  BasicObservers.html  BasicSignals.html  Parallelization.html  index.html
examples/: CMakeLists.txt
examples/src/: BasicAlgorithms.cpp  BasicComposition.cpp  BasicEvents.cpp  BasicObservers.cpp  BasicReactors.cpp  BasicSignals.cpp  BasicSynchronization.cpp  Main.cpp
include/react/: algorithm.h  api.h  context.h  event.h  group.h  observer.h  react.hpp  state.h
include/react/common/: Types.h  Util.h  ptrcache.h  slotmap.h  utility.h
include/react/detail/: DomainBase.h  EngineBase.h  IReactiveEngine.h  ObserverBase.h  ReactiveInput.h  Turn.h  algorithm_nodes.h  event_nodes.h  graph_impl.h  graph_interface.h  node_base.h  observer_nodes.h  state_nodes.h
include/react/engine/: PulsecountEngine.h  SubtreeEngine.h  ToposortEngine.h
include/react/logging/: EventLog.h  EventRecords.h
src/detail/: graph_impl.cpp
src/engine/: PulsecountEngine.cpp  SubtreeEngine.cpp  ToposortEngine.cpp
support/: generate_amalgamated_file.py
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  EventStreamTest.cpp  EventStreamTest.h  EventStreamTestQ.cpp  MoveTest.cpp  MoveTest.h  ObserverTest.cpp  ObserverTest.h  ObserverTestQ.cpp  OperationsTest.cpp  OperationsTest.h  OperationsTestQ.cpp  ParallelizationTest.cpp  ParallelizationTest.h  SignalTest.cpp  SignalTest.h  SignalTestQ.cpp  TestUtil.h  TransactionTest.cpp  TransactionTest.h  algorithm_tests.cpp  common_tests.cpp  event_tests.cpp  state_tests.cpp  tests_stdafx.hpp  transaction_tests.cpp
(+27 files in other folders)
